# md-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  README.md  dev-requirements.txt  environment.yaml  environment.yml  mdagent.yaml  mypy.ini  pyproject.toml  requirements.txt  setup.py  st_app.py
md-agent/: __init__.py  general_tools.py
mdagent/: __init__.py  agent.py  agent_cheat_sheet.md  agent_prompt.py  general_tools.py  mdagent.py  simulated_annealing.ipynb
mdcrow/: __init__.py
notebooks/: 1X3D.cif  3WKM.cif  Name2Simulation.ipynb  Visualization.ipynb  chat_examples.ipynb  clean_example.ipynb  create_radius_of_gyration.ipynb  eval.ipynb  eval_v1.ipynb  eval_v2.ipynb  getpdb_example.ipynb  gitissues.ipynb  lit_search.ipynb  log.txt  math_example.ipynb  memory_demo.ipynb  packmol_example.ipynb  paths_registry.json  pqa_example.ipynb  radius_of_gyration.txt  reproduce_simulation.py  rgy_1ATN.ipynb  rmsd_example.ipynb  set_and_run_example.ipynb  simulation_parameters.json  testing.ipynb  testing_changes.ipynb  tidy_1X3D.cif  tidy_3pqr.cif  trajectory.dcd
quinny_rmsd_notebooks/: 2TNF_gpt4_fail.ipynb
tests/: 3pqr.cif  __init__.py  conftest.py  test_agent.py  test_agents.py  test_analysis_fxns.py  test_analysis_inertia.py  test_analysis_misc.py  test_analysis_rmsd_ppi.py  test_analysis_sasa.py  test_analysis_timecorrelation.py  test_analysis_tools.py  test_distance_tools.py  test_eval.py  test_fxns.py  test_inertia.py  test_memory.py  test_packing.py  test_pathregistry.py  test_pca_tool.py  test_pdb_tools.py  test_sasa.py  (+21 more)
(+1829 files in other folders)
